libec: Add FlashReadCommand
BUG=b:144959033
TEST=FEATURES="test" emerge-hatch libec

Change-Id: I90a5b9a927b23fb1087b76b6a270c27b119cdcef
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/3154342
Commit-Queue: Dawid Niedźwiecki <dawidn@google.com>
Tested-by: Dawid Niedźwiecki <dawidn@google.com>
Reviewed-by: Dawid Niedźwiecki <dawidn@google.com>
Reviewed-by: Tom Hughes <tomhughes@chromium.org>

--- a/libec/BUILD.gn
+++ b/libec/BUILD.gn
@@ -66,6 +66,7 @@ source_set("libec_common") {
     "flash_info_params.cc",
     "flash_protect_command.cc",
     "flash_protect_command_factory.cc",
+    "flash_read_command.cc",
     "flash_spi_info_command.cc",
     "flash_write_command.cc",
     "get_chip_info_command.cc",
@@ -120,6 +121,7 @@ install_config("install_libec_headers") {
     "flash_info_params.h",
     "flash_protect_command.h",
     "flash_protect_command_factory.h",
+    "flash_read_command.h",
     "flash_spi_info_command.h",
     "flash_write_command.h",
     "get_chip_info_command.h",
@@ -248,6 +250,7 @@ if (use.test) {
       "flash_info_params_test.cc",
       "flash_protect_command_factory_test.cc",
       "flash_protect_command_test.cc",
+      "flash_read_command_test.cc",
       "flash_spi_info_command_test.cc",
       "flash_write_command_test.cc",
       "flash_write_params_test.cc",
