libec: Add FlashWriteCommand
BUG=b:144959033
TEST=FEATURES="test" emerge-hatch libec

Change-Id: Iadb7cf19c2648e9b236963f257084594f2501188
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/3154341
Commit-Queue: Dawid Niedźwiecki <dawidn@google.com>
Reviewed-by: Dawid Niedźwiecki <dawidn@google.com>
Reviewed-by: Edward O'Callaghan <quasisec@chromium.org>
Reviewed-by: Firas Sammoura <fsammoura@google.com>
Reviewed-by: Tom Hughes <tomhughes@chromium.org>
Tested-by: Dawid Niedźwiecki <dawidn@google.com>

--- a/libec/BUILD.gn
+++ b/libec/BUILD.gn
@@ -67,6 +67,7 @@ source_set("libec_common") {
     "flash_protect_command.cc",
     "flash_protect_command_factory.cc",
     "flash_spi_info_command.cc",
+    "flash_write_command.cc",
     "get_chip_info_command.cc",
     "get_comms_status_command.cc",
     "get_features_command.cc",
@@ -120,6 +121,7 @@ install_config("install_libec_headers") {
     "flash_protect_command.h",
     "flash_protect_command_factory.h",
     "flash_spi_info_command.h",
+    "flash_write_command.h",
     "get_chip_info_command.h",
     "get_comms_status_command.h",
     "get_features_command.h",
@@ -247,6 +249,8 @@ if (use.test) {
       "flash_protect_command_factory_test.cc",
       "flash_protect_command_test.cc",
       "flash_spi_info_command_test.cc",
+      "flash_write_command_test.cc",
+      "flash_write_params_test.cc",
       "get_chip_info_command_test.cc",
       "get_comms_status_command_test.cc",
       "get_features_command_test.cc",
