libec: Add FlashEraseCommand
BUG=b:144959033
TEST=FEATURES="test" emerge-hatch libec

Change-Id: Ib5da663a8fb899fd5775c5ed78fba87c33b397e1
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/3154343
Reviewed-by: Tom Hughes <tomhughes@chromium.org>
Reviewed-by: Dawid Niedźwiecki <dawidn@google.com>
Commit-Queue: Dawid Niedźwiecki <dawidn@google.com>
Tested-by: Dawid Niedźwiecki <dawidn@google.com>

--- a/libec/BUILD.gn
+++ b/libec/BUILD.gn
@@ -62,6 +62,7 @@ source_set("libec_common") {
     "fingerprint/fp_seed_command.cc",
     "fingerprint/fp_stats_command.cc",
     "fingerprint/fp_template_command.cc",
+    "flash_erase_command.cc",
     "flash_info_command.cc",
     "flash_info_params.cc",
     "flash_protect_command.cc",
@@ -117,6 +118,7 @@ install_config("install_libec_headers") {
     "ec_command_factory.h",
     "ec_panicinfo.h",
     "ec_usb_endpoint.h",
+    "flash_erase_command.h",
     "flash_info_command.h",
     "flash_info_params.h",
     "flash_protect_command.h",
@@ -246,6 +248,8 @@ if (use.test) {
       "fingerprint/fp_template_command_test.cc",
       "fingerprint/fp_template_params_test.cc",
       "fingerprint/fp_unlock_template_command_test.cc",
+      "flash_erase_command_test.cc",
+      "flash_erase_params_test.cc",
       "flash_info_command_test.cc",
       "flash_info_params_test.cc",
       "flash_protect_command_factory_test.cc",
