--- a/libec/BUILD.gn
+++ b/libec/BUILD.gn
@@ -68,6 +68,7 @@ source_set("libec_common") {
     "flash_protect_command.cc",
     "flash_protect_command_factory.cc",
     "flash_read_command.cc",
+    "flash_region_info_command.cc",
     "flash_spi_info_command.cc",
     "flash_write_command.cc",
     "get_chip_info_command.cc",
@@ -124,6 +125,7 @@ install_config("install_libec_headers") {
     "flash_protect_command.h",
     "flash_protect_command_factory.h",
     "flash_read_command.h",
+    "flash_region_info_command.h",
     "flash_spi_info_command.h",
     "flash_write_command.h",
     "get_chip_info_command.h",
@@ -255,6 +257,7 @@ if (use.test) {
       "flash_protect_command_factory_test.cc",
       "flash_protect_command_test.cc",
       "flash_read_command_test.cc",
+      "flash_region_info_command_test.cc",
       "flash_spi_info_command_test.cc",
       "flash_write_command_test.cc",
       "flash_write_params_test.cc",
