camera: refactor CameraBufferManager
Refactor the CameraBufferManager implementation to remove the legacy
code which was used to support SHM buffer.

The buffer allocator logic is moved to a dedicated hardware_buffer
folder. This is to prepare for adding more allocator backends such as
DMA-buf heaps and supporting AHardwareBuffer-like interfaces for feature
processing pipelines.

BUG=b:312705946
TEST=camera_buffer_manager_impl_test

Cq-Depend: chromium:5315141
Change-Id: I7fff195f8198d8a4ee07978020f43d9ed4cc5665
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5177946
Reviewed-by: Shik Chen <shik@chromium.org>
Commit-Queue: Ricky Liang <jcliang@chromium.org>
Tested-by: Ricky Liang <jcliang@chromium.org>

--- a/camera/common/BUILD.gn
+++ b/camera/common/BUILD.gn
@@ -127,7 +127,6 @@ generate_pkg_config("libcros_camera_device_config_pkg_config") {
 source_set("base") {
   sources = [
     "//camera/common/camera_buffer_manager_impl.cc",
-    "//camera/common/camera_buffer_manager_internal.cc",
     "//camera/common/camera_buffer_pool.cc",
     "//camera/common/camera_buffer_utils.cc",
     "//camera/common/camera_hal3_helpers.cc",
@@ -150,7 +149,10 @@ source_set("base") {
   ]
 
   pkg_deps = [ "re2" ]
-  deps = [ ":tracing" ]
+  deps = [
+    ":tracing",
+    "//camera/hardware_buffer",
+  ]
 
   # -fPIC needed by the libcros_camera.so shared library.
   configs += [ "//common-mk:pic" ]
