--- a/biod/study/analysis-tool/requirements.txt
+++ b/biod/study/analysis-tool/requirements.txt
@@ -40,6 +40,7 @@ pandas==2.2.2
 # pyparsing==3.1.2
 # python-dateutil==2.9.0.post0
 # pytz==2024.1
+requests==2.31.0
 scipy==1.13.0
 # six==1.16.0
 # stack-data==0.6.3
