hermes: Add ability to bump hermes logging
BUG=none
TEST=config_net_log  set-verbose-logging-on-reboot-all true; restart hermes

Change-Id: I46938e118d3cf331785b4c5d47416fcafe651de3
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/4117448
Tested-by: Pavan Holla <pholla@google.com>
Reviewed-by: Madhav <madhavadas@google.com>
Commit-Queue: Pavan Holla <pholla@google.com>
Reviewed-by: Eric Caruso <ejcaruso@chromium.org>
Reviewed-by: Andrew Lassalle <andrewlassalle@chromium.org>

--- a/hermes/init/hermes.conf
+++ b/hermes/init/hermes.conf
@@ -22,6 +22,9 @@ respawn limit 3 10
 normal exit 0
 
 pre-start script
+  if [ -f /var/cache/modem-utilities/log_hermes_debug ]; then
+    LOG_LEVEL="-2"
+  fi
   case "${LOG_LEVEL}" in
     -3|-2|-1|0|1|2)
       ;;
