--- a/lorgnette/dbus_permissions/org.chromium.lorgnette.conf
+++ b/lorgnette/dbus_permissions/org.chromium.lorgnette.conf
@@ -9,6 +9,13 @@
     <policy user="saned">
         <allow own="org.chromium.lorgnette"/>
         <allow send_destination="org.chromium.lorgnette"/>
+        <allow receive_sender="org.chromium.DlcService" />
+        <allow send_destination="org.chromium.DlcService"
+              send_interface="org.chromium.DlcServiceInterface"
+              send_member="Install" />
+        <allow send_destination="org.chromium.DlcService"
+               send_interface="org.chromium.DlcServiceInterface"
+              send_member="GetDlcState" />
     </policy>
     <policy user="root">
         <allow send_destination="org.chromium.lorgnette"/>
