diagnostics: Remove execve in cros_healthd seccomp
Also cleanup the BUILD.gn.

BUG=b:201970991, b:182964589
TEST=CQ

Change-Id: Iabbe209cd3097a5cb59dcbe743838ade05929601
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/4628645
Reviewed-by: Wei-Luan Wang <weiluanwang@google.com>
Auto-Submit: Byron Lee <byronlee@chromium.org>
Commit-Queue: Byron Lee <byronlee@chromium.org>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Tested-by: Byron Lee <byronlee@chromium.org>

--- a/diagnostics/cros_healthd/seccomp/BUILD.gn
+++ b/diagnostics/cros_healthd/seccomp/BUILD.gn
@@ -8,7 +8,6 @@ group("seccomp") {
   deps = [
     ":diagnostics_seccomp",
     ":diagnostics_seccomp_delegate",
-    ":diagnostics_seccomp_healthd",
   ]
 }
 
@@ -43,6 +42,7 @@ install_and_check_seccomp_policy("diagnostics_seccomp") {
   _arch = getenv("ARCH")
   sources = [
     "${_arch}/btmon-seccomp.policy",
+    "${_arch}/cros_healthd-seccomp.policy",
     "${_arch}/fio-seccomp.policy",
     "${_arch}/hciconfig-seccomp.policy",
     "${_arch}/healthd_rm-seccomp.policy",
@@ -89,15 +89,4 @@ install_and_check_seccomp_policy("diagnostics_seccomp_delegate") {
     required_syscalls += [ "process_vm_readv" ]
   }
   denied_syscalls = BASE_DENIED_SYSCALLS
-}
-
-# TODO(b/182964589): Merge this back to diagnostics_seccomp once we can remove
-# execve seccomp.
-install_and_check_seccomp_policy("diagnostics_seccomp_healthd") {
-  _arch = getenv("ARCH")
-  sources = [ "${_arch}/cros_healthd-seccomp.policy" ]
-  install_path = "seccomp_policy"
-
-  required_syscalls = BASE_REQUIRED_SYSCALLS
-  denied_syscalls = []
 }
