hammerd: implement i2c endpoint
Implement UsbEndpointInterface for I2C bus.

BUG=b:303343102
TEST=On Geralt, run
       hammerd --i2c_path=4-0056 --vendor_id=1111 --product_id=2222 \
       --ec_image_path=ec.bin \
       --update_if=mismatch
     Able to update between two different versions

Change-Id: Ie13be0e59409cf0d1f2d83dfec7e0fdb96ccb5bd
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5191643
Commit-Queue: Ting Shen <phoenixshen@chromium.org>
Reviewed-by: Fei Shao <fshao@chromium.org>
Tested-by: Ting Shen <phoenixshen@chromium.org>

--- a/hammerd/BUILD.gn
+++ b/hammerd/BUILD.gn
@@ -52,6 +52,7 @@ static_library("libhammerd") {
     "dbus_wrapper.cc",
     "fmap_utils.cc",
     "hammer_updater.cc",
+    "i2c_endpoint.cc",
     "pair_utils.cc",
     "process_lock.cc",
     "update_fw.cc",
