common-mk: disable legacy gtest APIs
Make sure our projects upgrade sooner rather than later.

BUG=None
TEST=CQ passes

Cq-Depend: chrome-internal:6993566, chromium:5318290, chromium:5318291
Change-Id: I5616f5f4259c78c05039d9a63a2c63abe5869b53
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/4762827
Commit-Queue: Mike Frysinger <vapier@chromium.org>
Tested-by: Mike Frysinger <vapier@chromium.org>
Reviewed-by: Jack Rosenthal <jrosenth@chromium.org>

--- a/common-mk/BUILD.gn
+++ b/common-mk/BUILD.gn
@@ -298,6 +298,9 @@ config("test") {
     ]
   }
 
+  # Disable legacy APIs so people are forced to upgrade.
+  defines = [ "GTEST_REMOVE_LEGACY_TEST_CASEAPI_" ]
+
   # gnlint: disable=GnLintCommonTesting
   libs = [
     "gmock",
