arc-setup: use Rust library to process XML
Replace libxml2 usage with arc-setup-rs, which internally uses quick-xml
for general XML parsing.

BUG=b:281088943
TEST=cros_workon_make --board=hatch arc-setup --test
TEST=on cbx, |grep Photos| in /oem/etc/permissions/platform.xml and in |pm list features|
TEST=build pkgs, build img from scratch for Brya, deploy and verify |pm list features| again

Cq-Depend: chromium:4808835, chromium:5440556
Change-Id: I8cc459157cfb2511d638cdd7d139705f3c816790
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/4808287
Reviewed-by: Allen Webb <allenwebb@google.com>
Reviewed-by: Yury Khmel <khmel@chromium.org>
Commit-Queue: Matthew DeVore <matvore@chromium.org>
Tested-by: Matthew DeVore <matvore@chromium.org>

--- a/arc/setup/BUILD.gn
+++ b/arc/setup/BUILD.gn
@@ -50,7 +50,6 @@ pkg_config("target_defaults_pkg_deps") {
     "libsegmentation",
     "libselinux",
     "libuser_data_auth-client",
-    "libxml-2.0",
     "re2",
 
     # system_api depends on protobuf (or protobuf-lite). It must appear
@@ -120,7 +119,10 @@ libarc_setup_sources = [
 static_library("libarc_setup_static") {
   sources = libarc_setup_sources
   configs += [ ":target_defaults" ]
-  libs = [ "bootstat" ]
+  libs = [
+    "arc_setup_rs",
+    "bootstat",
+  ]
   deps = [ "xml:libandroidxml" ]
 }
 
@@ -132,7 +134,10 @@ shared_library("libarc_setup") {
     "USE_ARC_HW_OEMCRYPTO=${use.arc_hw_oemcrypto}",
   ]
   configs += [ ":target_defaults" ]
-  libs = [ "bootstat" ]
+  libs = [
+    "arc_setup_rs",
+    "bootstat",
+  ]
   deps = [ "xml:libandroidxml" ]
 }
 
