flex_hwis: Add a flex hardware cache
We're adding a hardware cache feature to support easily grabbing hw data
from crash reports, without directly depending on cros_healthd.

In a future commit: add upstart conf to trigger on startup

BUG=b:300429988, b:274669186
TEST=cros workon -breven start chromeos-base/flex_hwis
     cros_workon_make -breven chromeos-base/flex_hwis --test

Cq-Depend: chromium:5374874
Change-Id: I26be53a215b9f0611b17dd72318dcffaefce5553
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/4818648
Reviewed-by: Jeffery Miller <jefferymiller@google.com>
Commit-Queue: Ted Brandston <tbrandston@google.com>
Tested-by: Ted Brandston <tbrandston@google.com>
Reviewed-by: TingHao Lin <tinghaolin@google.com>
Reviewed-by: Justin Ouellette <justinoue@google.com>

--- a/flex_hwis/BUILD.gn
+++ b/flex_hwis/BUILD.gn
@@ -49,6 +49,7 @@ proto_library("hwis_data_proto") {
 
 static_library("libflex_hwis") {
   sources = [
+    "flex_hardware_cache.cc",
     "flex_hwis.cc",
     "flex_hwis_check.cc",
     "flex_hwis_mojo.cc",
@@ -142,7 +143,10 @@ if (use.test) {
   }
 
   executable("flex_hwis_test") {
-    sources = [ "flex_hwis_test.cc" ]
+    sources = [
+      "flex_hardware_cache_test.cc",
+      "flex_hwis_test.cc",
+    ]
     configs += [
       "//common-mk:test",
       ":flex_hwis_test_config",
