--- a/flex_hwis/init/upstart/flex_hwis.conf
+++ b/flex_hwis/init/upstart/flex_hwis.conf
@@ -12,4 +12,4 @@ tmpfiles /usr/lib/tmpfiles.d/flex_hwis.conf
 task
 
 exec minijail0 --config /usr/share/minijail/flex_hwis.conf -- \
-  /usr/bin/flex_hwis_tool
+  /usr/bin/flex_hwis_tool --send
