libtouchraw: Add an interface class
Provide an interface to touchraw library.

BUG=b:275615824
TEST=emerge-rex libtouchraw succeeded and manually test it on a rex
device

Change-Id: I3828fa75cd7d5ec6d1b972d56003e868b153ebf4
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/4875226
Reviewed-by: Torsha Banerjee <torsha@google.com>
Reviewed-by: Jing Wang <jiwan@chromium.org>
Commit-Queue: Jingyuan Liang <jingyliang@chromium.org>
Reviewed-by: Rob Schonberger <robsc@google.com>
Auto-Submit: Jingyuan Liang <jingyliang@chromium.org>
Tested-by: Jingyuan Liang <jingyliang@chromium.org>
Reviewed-by: Henry Barnor <hbarnor@chromium.org>
Reviewed-by: Rob Schonberger <robsc@chromium.org>

--- a/libtouchraw/BUILD.gn
+++ b/libtouchraw/BUILD.gn
@@ -29,6 +29,7 @@ shared_library("libtouchraw") {
     "defragmenter.cc",
     "parser.cc",
     "reader.cc",
+    "touchraw_interface.cc",
   ]
   configs += [ ":target_defaults_pkg_deps" ]
   install_path = "lib"
