runtime_probe: Add ec_component probe function
Add ec_component probe function to probe components behind EC leveraging
component manifest engine (CME).

BUG=b:297319195
TEST=unit test

Change-Id: I073507e278ad700560928a412c006f98780fa98b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/4908900
Tested-by: Kevin Lin <kevinptt@chromium.org>
Commit-Queue: Kevin Lin <kevinptt@chromium.org>
Reviewed-by: Chung-sheng Wu <chungsheng@google.com>

--- a/runtime_probe/functions/BUILD.gn
+++ b/runtime_probe/functions/BUILD.gn
@@ -29,6 +29,7 @@ source_set("functions") {
     "ata_storage.cc",
     "audio_codec.cc",
     "cellular_network.cc",
+    "ec_component.cc",
     "ec_i2c.cc",
     "edid.cc",
     "ethernet_network.cc",
@@ -62,6 +63,7 @@ if (use.test) {
       "ap_i2c_test.cc",
       "ata_storage_test.cc",
       "audio_codec_test.cc",
+      "ec_component_test.cc",
       "ec_i2c_test.cc",
       "edid_test.cc",
       "generic_battery_test.cc",
