secagentd: Stop reporting for unaffiliated
Put functionality behind use flag, but if the device user
is unaffiliated stop reporting.

BUG=b:300966976
TEST=When unaffiliated user is signed in verified no
events are generated

Change-Id: I359868afe26a63f129e6c00ff22919d9fd4f8516
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/4888425
Reviewed-by: Jason Ling <jasonling@chromium.org>
Tested-by: Ryan Borzello <rborzello@google.com>
Commit-Queue: Ryan Borzello <rborzello@google.com>

--- a/secagentd/init/secagentd.conf
+++ b/secagentd/init/secagentd.conf
@@ -19,6 +19,9 @@ import BYPASS_POLICY_FOR_TESTING
 # to be enqueued successfully.
 import BYPASS_ENQ_OK_WAIT_FOR_TESTING
 
+# Set this env var to true to stop reporting XDR events for unaffiliated users.
+import STOP_REPORTING_FOR_UNAFFILIATED_USERS
+
 # Set this env var to the desired value of the agent heartbeat timer
 # (> 0) period in seconds.
 import SET_HEARTBEAT_PERIOD_S_FOR_TESTING
@@ -65,6 +68,13 @@ script
   v="${BYPASS_ENQ_OK_WAIT_FOR_TESTING}"
   if [ -n "${v}" ]; then
     args="${args} --bypass_enq_ok_wait_for_testing=${v}"
+  fi
+
+  # --stop_reporting_for_unaffiliated_users: Stops reporting when an
+  # unaffiliated user signs in.
+  v="${STOP_REPORTING_FOR_UNAFFILIATED_USERS}"
+  if [ -n "${v}" ]; then
+    args="${args} --stop_reporting_for_unaffiliated_users=${v}"
   fi
 
   # --set_heartbeat_period_s_for_testing: Set timer for agent heartbeat.
