--- a/secagentd/BUILD.gn
+++ b/secagentd/BUILD.gn
@@ -164,6 +164,7 @@ if (use.test) {
       "test/batch_sender_test.cc",
       "test/bpf_skeleton_factory_tests.cc",
       "test/device_user_test.cc",
+      "test/disable_unaffiliated_secagent_test.cc",
       "test/message_sender_test.cc",
       "test/metrics_sender_test.cc",
       "test/network_bpf_test.cc",
