flex_hwis: Add upstart + tmpfiles.d for hw cache
This creates the hw cache directory and populates it when cros_healthd
comes up.

This also includes a change to SELinux to support tmpfiles.d creating
the cache dir, see:
https://chromium.googlesource.com/chromiumos/platform2/+/HEAD/init/tmpfiles.d/README.md#paths-missing-selinux-file-context-entries

BUG=b:300429988, b:274669186
TEST=build image (needed for selinux change to take effect, I think)
     run image
     ssh in and manually check that /run/flex_hardware/cache.binpb has
        been populated correctly, e.g. with `hexdump -C`.

Change-Id: I2ed823abd2ef4823f8a9c4bdb9bce63a3baeeb59
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/4916452
Reviewed-by: Betul Soysal <betuls@google.com>
Tested-by: Ted Brandston <tbrandston@google.com>
Reviewed-by: Jeffery Miller <jefferymiller@google.com>
Reviewed-by: TingHao Lin <tinghaolin@google.com>
Commit-Queue: Ted Brandston <tbrandston@google.com>

--- a/flex_hwis/BUILD.gn
+++ b/flex_hwis/BUILD.gn
@@ -99,13 +99,17 @@ install_config("install_seccomp_policy") {
 }
 
 install_config("install_tmpfiles_config") {
-  sources = [ "init/tmpfiles.d/flex_hwis.conf" ]
+  sources = [
+    "init/tmpfiles.d/flex_hardware_cache.conf",
+    "init/tmpfiles.d/flex_hwis.conf",
+  ]
   install_path = "tmpfilesd"
 }
 
 install_config("install_upstart_config") {
   sources = [
     "init/upstart/flex_device_metrics.conf",
+    "init/upstart/flex_hardware_cache.conf",
     "init/upstart/flex_hwis.conf",
   ]
   install_path = "upstart"
