camera: Request camera from mojo service manager in Plug-in VM
Since mojo service manager is available in Plug-in VM host now, this CL
lets Plug-in VM host requests the CameraHalDispatcher service from mojo
service manager instead of camera socket.

BUG=b:304685896
TEST=Manually on parallels and pass camera.PlatformServiceSmoke

Cq-Depend: chrome-internal:7110279, chromium:4935782
Change-Id: I49d8c7e9576288ed907c92c9a81d6ffd41c9037b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/4938957
Commit-Queue: Sean Li <seannli@google.com>
Reviewed-by: Wei Lee <wtlee@chromium.org>
Tested-by: Sean Li <seannli@google.com>

--- a/camera/common/camera_hal_dispatcher_mojo_policy.jsonc
+++ b/camera/common/camera_hal_dispatcher_mojo_policy.jsonc
@@ -58,5 +58,11 @@
     "request": [
       "CrosCameraHalDispatcher"
     ]
+  },
+  {
+    "identity": "u:r:cros_vm_concierge:s0",
+    "request": [
+      "CrosCameraHalDispatcher"
+    ]
   }
 ]
