--- a/vm_tools/init/vm_concierge.conf
+++ b/vm_tools/init/vm_concierge.conf
@@ -268,6 +268,7 @@ script
      -b /run/chromeos-config/v1/ \
      -b /run/cras/vms,/run/cras,1 \
      -b /run/dbus,/run/dbus,1 \
+     -b /run/mojo,,1 \
      -b /run/vm,/run/vm,1 \
      -b /run/vm_cicerone/client,/run/vm_cicerone/client,1 \
      -k /run/imageloader,/run/imageloader,none,0x5000 \
