--- a/crash-reporter/BUILD.gn
+++ b/crash-reporter/BUILD.gn
@@ -131,6 +131,7 @@ static_library("libcrash_reporter") {
     "crash_collection_status.cc",
     "crash_collector.cc",
     "crash_reporter_failure_collector.cc",
+    "detailed_hardware_data.cc",
     "ec_collector.cc",
     "ephemeral_crash_collector.cc",
     "generic_failure_collector.cc",
@@ -485,6 +486,7 @@ if (use.test) {
       "crash_sender_paths_test.cc",
       "crash_sender_util_test.cc",
       "crash_serializer_test.cc",
+      "detailed_hardware_data_test.cc",
       "ec_collector_test.cc",
       "ephemeral_crash_collector_test.cc",
       "generic_failure_collector_test.cc",
