cryptohome: Enable lockbox-cache-manager service
BUG=b:307541892
TEST=unittests pass
TEST=OOBE test passes
TEST=tast run $dut hwsec.InstallAttributes \
     hwsec.CrossVersionInstallAttributes.ti50_r118 \
     hwsec.CrossVersionInstallAttributes.current \
     hwsec.CrossVersionInstallAttributesMigrationAbort*

Change-Id: Ie01eb99819103827157f23d1d8ca329231461755
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/4991922
Commit-Queue: Md Sadman Sakib <sadmansakib@google.com>
Tested-by: Md Sadman Sakib <sadmansakib@google.com>
Reviewed-by: Yi Chou <yich@google.com>

--- a/cryptohome/init/lockbox-cache.conf
+++ b/cryptohome/init/lockbox-cache.conf
@@ -11,15 +11,4 @@ start on starting boot-services and started syslog
 
 oom score -100
 
-env LOCKBOX_CACHE_DIR=/run/lockbox
-env LOCKBOX_NVRAM_FILE=/tmp/lockbox.nvram
-
-env INSTALL_ATTRS_CACHE=/run/lockbox/install_attributes.pb
-env INSTALL_ATTRS_NEW_PATH=/var/lib/device_management
-env OLD_INSTALL_ATTRS_FILE=/home/.shadow/install_attributes.pb
-env COPY_INSTALL_ATTRS_FILE=/var/lib/device_management/install_attributes.pb.copy
-env NEW_INSTALL_ATTRS_FILE=/var/lib/device_management/install_attributes.pb
-
-pre-start script
-  /usr/share/cros/init/lockbox-cache.sh 2>&1 | logger -t lockbox-cache
-end script
+pre-start exec lockbox-cache-manager
