flex_hwis: Add minijail + seccomp for hw cache
To make sure we can actually write the cache.

BUG=b:300429988, b:274669186
TEST=build image
     run image
     create cache dir (automated in future commit)
       # mkdir /run/flex_hardware -m 0755
       # chown flex_hwis:flex_hwis /run/flex_hardware/
     flex_hwis_tool --cache
     manually inspect logs + cache dir
TEST=Similarly, build & run image, set up cache dir
     minijail0 -u flex_hwis -g flex_hwis -e -l -N -p -n \
      --uts \
      --profile=minimalistic-mountns \
      -S /usr/share/policy/flex_hardware_cache-seccomp.policy \
      -k '/run,/run,tmpfs,MS_NODEV|MS_NOEXEC|MS_NOSUID,mode=755,size=10M' \
      -b /run/flex_hardware,,1 \
      -b /run/mojo,,1 \
       /usr/bin/flex_hwis_tool --cache

Change-Id: I8ead00f66aeda73b6a7e1accf9bab23fb796f23c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5014017
Tested-by: Ted Brandston <tbrandston@google.com>
Reviewed-by: TingHao Lin <tinghaolin@google.com>
Commit-Queue: Ted Brandston <tbrandston@google.com>
Reviewed-by: Jeffery Miller <jefferymiller@google.com>

--- a/flex_hwis/BUILD.gn
+++ b/flex_hwis/BUILD.gn
@@ -78,6 +78,7 @@ executable("flex_hwis_tool") {
 install_config("install_minijail_config") {
   sources = [
     "minijail/flex_device_metrics.conf",
+    "minijail/flex_hardware_cache.conf",
     "minijail/flex_hwis.conf",
   ]
   install_path = "minijail_conf"
@@ -87,10 +88,12 @@ install_config("install_seccomp_policy") {
   install_path = "seccomp_policy"
   sources = [
     "seccomp_filters/flex_device_metrics.policy",
+    "seccomp_filters/flex_hardware_cache.policy",
     "seccomp_filters/flex_hwis.policy",
   ]
   outputs = [
     "flex_device_metrics-seccomp.policy",
+    "flex_hardware_cache-seccomp.policy",
     "flex_hwis-seccomp.policy",
   ]
 }
