login: Leverage libvpd for device information
With libvpd, this information is all easily available without string
("key"="value") parsing, and without calling out to flashrom. Access is
fast (sourcing from /sys/firmware/vpd/... or a tmpfs cache in
/run/vpd/...) and always available (even at early boot). Retrieve VPD
values in-process then, instead of via upstart.

Note that the ui-collect-machine-info and ui-init-late jobs still
collect some rootdisk info from udev. These could probably be inlined
and entirely deleted as a followup.

BUG=b:288327526
TEST=cros_run_unit_tests
TEST=CQ

Cq-Depend: chromium:4634362, chromium:5019758
Change-Id: Ieb103f4d12d8b2ae537c4e5cf47fa057ca65231b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5019228
Reviewed-by: Hidehiko Abe <hidehiko@chromium.org>
Commit-Queue: Brian Norris <briannorris@chromium.org>
Tested-by: Brian Norris <briannorris@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>

--- a/login_manager/BUILD.gn
+++ b/login_manager/BUILD.gn
@@ -129,6 +129,7 @@ static_library("libsession_manager") {
     "bootstat",
     "installattributes",
     "policy",
+    "vpd",
   ]
   deps = [
     ":login_manager-login_screen_storage-protos",
