--- a/resourced/Cargo.toml
+++ b/resourced/Cargo.toml
@@ -37,11 +37,13 @@ once_cell = "1.7"
 regex = "1.5"
 schedqos = { path = "./schedqos" }
 tempfile = "3.0.2"
-tokio = { version = "1.29.1", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
+tokio = { version = "1.29.1", features = ["io-util", "macros", "net", "rt", "sync", "time", "rt-multi-thread", "fs"] }
 system_api = { path = "../system_api" } # provided by ebuild
 protobuf = "3.2"
 featured = { version = "0.1.0", optional = true }
 procfs = "0.15"
+num_cpus = "1.0.0"
+lazy_static = "1.4"
 
 [dev-dependencies]
 tempfile = "3"
