init: Dump rollback-prefixed pstore on reboot
Firmware updates may ask for a reboot before starting ui. To support
enterprise rollback, which stores its data secret in pstore across a
reboot, dump rollback contents of pstore on fw update reboot.

Add a new reboot reason "firmware-update" to identify reboots that
update firmware and happen during system startup.

BUG=b:306656848
TEST=(with config that fakes fw reboot on flag file below)
touch /mnt/stateful_partition/fake_fw_reboot
echo "asd" > /dev/pmsg0
echo "rollback secret_key" > /dev/pmsg0
echo "test" > /dev/pmsg0
reboot
cat /sys/fs/pstore/pmsg-ramoops-0
  pmsg-key=<redacted - long string>
  rollback secret_key

Change-Id: I891145ef03a4b8769a80884aa7786ad4be94c98d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5038715
Tested-by: Miriam Polzer <mpolzer@google.com>
Reviewed-by: Brian Norris <briannorris@chromium.org>
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Commit-Queue: Miriam Polzer <mpolzer@google.com>

--- a/init/upstart/boot-update-firmware.conf
+++ b/init/upstart/boot-update-firmware.conf
@@ -231,7 +231,9 @@ retry"
       logit "rootfs on removable device, not rebooting"
     else
       logit "reboot required"
-      reboot
+      # powerd_setuid_helper does not rely on powerd, otherwise there would be
+      # a potential race condition since powerd is just starting up.
+      powerd_setuid_helper --action=reboot --shutdown_reason=firmware-update
       exit 0
     fi
   fi
