crash: Dump processes with many open files
If powerd fails to open a file because the system-wide limit has been
exceeded, it's likely that some program in the system is leaking file
handles.

Previously we thought this was powerd itself, but the logs added as part
of https://buganizer.corp.google.com/issues/207716926 indicate that the
problem is coming from some other process.

This patch calls a powerd utility that dumps top fd consumers if powerd
crashes with a suspected fd leak failure.

BUG=b:207716926
TEST=echo >> "Too many open files in system" >> /var/log/power_manager/powerd.LATEST
TEST=kill -SIGSEGV $(pgrep powerd)
TEST=grep file-nr /var/spool/crash/*.log

Change-Id: Ifd2e78741898d7c95c15960dedba3823cc89a20b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5055933
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Commit-Queue: Sami Kyöstilä <skyostil@chromium.org>
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Auto-Submit: Sami Kyöstilä <skyostil@chromium.org>
Tested-by: Sami Kyöstilä <skyostil@chromium.org>

--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -206,12 +206,21 @@ crash_reporter_failure=\
 
 # Dump the last 50 lines of the last two powerd log files -- if the job has
 # already restarted, we want to see the end of the previous instance's logs.
+#
+# If powerd died because there were too many files open in the system, also
+# dump a list of processes with many open files.
 powerd=\
+  fd_leak=0; \
   for f in $(ls -1tr /var/log/power_manager/powerd.[0-9]* | tail -2); do \
     echo "===$(basename $f) (tail)==="; \
     tail -50 $f; \
+    grep -q "Too many open files in system" $f && fd_leak=1; \
     echo EOF; \
-  done
+  done; \
+  if [ $fd_leak -eq 1 ]; then \
+    echo "===open files==="; \
+    /usr/bin/crash_fd_logger; \
+  fi
 # If power_supply_info aborts (due to e.g. a bad battery), its failure message
 # could end up in various places depending on which process was running it.
 # Attach the end of powerd's log since it might've also logged the underlying
