patchpanel: Add setuid_restrictions
To restrict the uid the patchpaneld user. Currently we only allow
process with patchpaneld user to nobody.

BUG=b:180654103
TEST=emerge and deploy patchpanel, no suspicious log in net.log.
TEST=tast run $DUT security.SafesetidEnsurePolicy

Change-Id: I68e944f4354ac98af79f26f1be1a1379dcf2f635
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5065870
Reviewed-by: Allen Webb <allenwebb@google.com>
Commit-Queue: Jie Jiang <jiejiang@chromium.org>
Tested-by: Jie Jiang <jiejiang@chromium.org>

--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -11,6 +11,7 @@ group("all") {
     ":install_dbus_config",
     ":install_init_config",
     ":install_seccomp_policy",
+    ":install_setuid_restriction",
     ":libpatchpanel",
     ":libpatchpanel-util",
     ":patchpaneld",
@@ -52,6 +53,12 @@ install_config("install_seccomp_policy") {
   sources = [ "seccomp/iptables-seccomp-" + getenv("ARCH") + ".policy" ]
   install_path = "seccomp_policy"
   outputs = [ "iptables-seccomp.policy" ]
+}
+
+# Install the setuid restriction config.
+install_config("install_setuid_restriction") {
+  sources = [ "setuid_restrictions/patchpaneld_uid_allowlist.txt" ]
+  install_path = "/usr/share/cros/startup/process_management_policies"
 }
 
 pkg_config("target_defaults") {
