--- a/patchpanel/init/patchpanel.conf
+++ b/patchpanel/init/patchpanel.conf
@@ -70,9 +70,8 @@ script
   # ARC container and changing the owner of several files in that.
   caps="${caps},cap_sys_chroot,cap_chown"
 
-  # TODO(b/293389589): Remove usages of nobody user.
   # CAP_SETUID and CAP_SETGID are used to change user and group to nobody when
-  # forking processes.
+  # forking processes. The transition is protected by SafeSetID LSM.
   caps="${caps},cap_setuid,cap_setgid"
 
   # CAP_SETPCAP is required to set CAPs when forking processes.
