--- a/metrics/BUILD.gn
+++ b/metrics/BUILD.gn
@@ -27,6 +27,7 @@ group("all") {
   if (use.test) {
     deps += [
       ":cumulative_metrics_test",
+      ":debugd_reader_test",
       ":metrics_library_test",
       ":persistent_integer_test",
       ":process_meter_test",
@@ -90,6 +91,7 @@ pkg_config("target_defaults_pkg_deps") {
     "dbus-1",
     "libbrillo",
     "libchrome",
+    "libdebugd-client",
     "re2",
   ]
 }
@@ -101,6 +103,7 @@ config("target_defaults") {
 
 static_library("libmetrics_daemon") {
   sources = [
+    "debugd_reader.cc",
     "metrics_daemon.cc",
     "metrics_daemon_main.cc",
     "process_meter.cc",
@@ -192,6 +195,17 @@ if (use.test) {
       "cumulative_metrics.cc",
       "cumulative_metrics_test.cc",
       "persistent_integer.cc",
+    ]
+    configs += [
+      "//common-mk:test",
+      ":target_defaults",
+    ]
+    deps = [ "//common-mk/testrunner:testrunner" ]
+  }
+  executable("debugd_reader_test") {
+    sources = [
+      "debugd_reader.cc",
+      "debugd_reader_test.cc",
     ]
     configs += [
       "//common-mk:test",
