metrics: Collect MMC error stats
MMC controllers logic stores several counters for selected fatal errors.
The data is kept in a dedicated, root readable debugfs file.
Extract values from some of those counters and sent them to UMA as
histograms. With this patch four counters are parsed:
a) cmd timeouts and data timeouts
b) cmd CRC hash mismatch and data CRC hash mismatch
Since we can't read the debugfs file directly, collect the logs from
debugd instead by calling a dedicated dbus method. The method returns
a single string with the contents of "err_stats" file for every
controller present in the system.
Currently we're only collecting counters from the controller on which
the rootfs is.

Histogram XML changes: chromium:5110139

BUG=b:309423643
TEST=P2_TEST_FILTER="MmcErrorParserTest.*" cros_workon_make --test --board=dedede metrics
TEST=Inject MMC errors on dedede and check chrome://histograms

Cq-Depend: chromium:5164247
Change-Id: I42965618cb2388ef444ea53b03a5704e4579ac88
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5098835
Reviewed-by: Daniil Lunev <dlunev@chromium.org>
Commit-Queue: Kornel Dulęba <korneld@google.com>
Tested-by: Kornel Dulęba <korneld@google.com>
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Reviewed-by: Gwendal Grignou <gwendal@chromium.org>

--- a/metrics/BUILD.gn
+++ b/metrics/BUILD.gn
@@ -29,6 +29,7 @@ group("all") {
       ":cumulative_metrics_test",
       ":debugd_reader_test",
       ":metrics_library_test",
+      ":mmc_error_parser_test",
       ":persistent_integer_test",
       ":process_meter_test",
       ":timer_test",
@@ -106,6 +107,7 @@ static_library("libmetrics_daemon") {
     "debugd_reader.cc",
     "metrics_daemon.cc",
     "metrics_daemon_main.cc",
+    "mmc_error_parser.cc",
     "process_meter.cc",
     "vmlog_writer.cc",
   ]
@@ -238,6 +240,19 @@ if (use.test) {
       ":metrics_test_support",
       "//common-mk/testrunner:testrunner",
     ]
+  }
+  executable("mmc_error_parser_test") {
+    sources = [
+      "debugd_reader.cc",
+      "mmc_error_parser.cc",
+      "mmc_error_parser_test.cc",
+      "persistent_integer.cc",
+    ]
+    configs += [
+      "//common-mk:test",
+      ":target_defaults",
+    ]
+    deps = [ "//common-mk/testrunner:testrunner" ]
   }
   executable("process_meter_test") {
     sources = [
