power: [Floss] Allow communication with the Bluetooth daemon via DBus
Allow powerd and the Bluetooth daemon to communicate with each other
via DBus to send and receive device battery data.

BUG=b:288135965
TEST=manual test

Cq-Depend: chromium:5002924
Change-Id: I38d5b01b8a8bb397f036bd0a3d71193debf1a746
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5100352
Auto-Submit: Sarvesh Kalwit <sarveshkalwit@google.com>
Tested-by: Sarvesh Kalwit <sarveshkalwit@google.com>
Commit-Queue: Sarvesh Kalwit <sarveshkalwit@google.com>
Reviewed-by: Puthikorn Voravootivat <puthik@chromium.org>
Reviewed-by: Jesse Melhuish <melhuishj@chromium.org>

--- a/power_manager/dbus/org.chromium.PowerManager.conf
+++ b/power_manager/dbus/org.chromium.PowerManager.conf
@@ -13,5 +13,9 @@
            send_type="method_call" send_member="EmitEvent" />
   </policy>
 
+  <policy user="bluetooth">
+    <allow send_destination="org.chromium.PowerManager"/>
+  </policy>
+
   <limit name="max_replies_per_connection">512</limit>
 </busconfig>
