libbrillo: Add helper to check lockdown mode
Kernel lockdown [1] is enabled on ChromeOS Flex as one of the
requirements for UEFI secure boot.  However, features such as elogtool
in cros_minidiag [2] won't work with lockdown enabled, causing crash
report and log spam.

So, we add a method to check what lockdown mode is enabled (if any),
allowing one to turn off features that won't work with kernel lockdown,
or exit cleanly rather than crash.

Note, this change is possible because securityfs is now mounted as
readonly, see Cq-Depend.

[1]: https://man7.org/linux/man-pages/man7/kernel_lockdown.7.html
[2]:https://crsrc.org/o/src/platform2/diagnostics/cros_minidiag/main.cc;l=65;drc=a28cf6e42a1bd00986d656876fdcd9c9888cb19d

BUG=b:306222271
TEST=cros_sdk P2_TEST_FILTER="KernelLockdownUtil*" cros_run_unit_tests --board=reven --packages libbrillo

Cq-Depend: chromium:5082410
Change-Id: Ic459e52759e17bd0d34e7832ac0089a5018684b7
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5017982
Reviewed-by: Hidehiko Abe <hidehiko@chromium.org>
Tested-by: Andre Braga <andrebraga@google.com>
Reviewed-by: Nicholas Bishop <nicholasbishop@google.com>
Commit-Queue: Andre Braga <andrebraga@google.com>

--- a/libbrillo/BUILD.gn
+++ b/libbrillo/BUILD.gn
@@ -79,6 +79,7 @@ libbrillo_sublibs = [
       "brillo/hash/MurmurHash3.cc",
       "brillo/kernel_config_utils.cc",
       "brillo/key_value_store.cc",
+      "brillo/lockdown/kernel_lockdown_utils.cc",
       "brillo/message_loops/base_message_loop.cc",
       "brillo/message_loops/message_loop.cc",
       "brillo/message_loops/message_loop_utils.cc",
@@ -526,6 +527,7 @@ if (use.test) {
       "brillo/hash/murmurhash_test.cc",
       "brillo/kernel_config_utils_test.cc",
       "brillo/key_value_store_test.cc",
+      "brillo/lockdown/kernel_lockdown_utils_test.cc",
       "brillo/map_utils_test.cc",
       "brillo/message_loops/base_message_loop_test.cc",
       "brillo/message_loops/fake_message_loop_test.cc",
