dlcservice: imageloader: Determine DLC image path base on `user-tied`
Add `user-tied` field to manifest. If this value is set to true,
dlcservice retrieves the user hash from the session manager, and
installs the DLC into the cryptohome daemon store of the primary user.

BUG=b:255983027
TEST=FEATURES=test emerge-$B dlcservice imageloader

Change-Id: I51ca47623bda0bdcb9482193101597f656efca47
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5096056
Reviewed-by: Jae Hoon Kim <kimjae@chromium.org>
Tested-by: Yuanpeng Ni‎ <yuanpengni@chromium.org>
Commit-Queue: Yuanpeng Ni‎ <yuanpengni@chromium.org>

--- a/dlcservice/BUILD.gn
+++ b/dlcservice/BUILD.gn
@@ -49,6 +49,7 @@ pkg_config("target_defaults") {
     "libdlcservice-metadata",
     "libimageloader-client",
     "libmetrics",
+    "libsession_manager-client",
     "libimageloader-manifest",
     "libupdate_engine-client",
 
@@ -215,6 +216,7 @@ if (use.test) {
       "libbrillo-test",
       "libchrome-test",
       "libimageloader-client-test",
+      "libsession_manager-client-test",
       "libupdate_engine-client-test",
     ]
     if (use.lvm_stateful_partition) {
