--- a/dlcservice/minijail/dlcservice.conf
+++ b/dlcservice/minijail/dlcservice.conf
@@ -8,6 +8,7 @@
 # -n prevents the executable from gaining new privileges.
 # minimal mount namespace without /dev because we want real /dev.
 # tmpfs on /run, /var, /sys so we can create mounts under them.
+# -mount /run/daemon-store/dlcservice and /run/daemon-store-cache/dlcservice.
 # -bind-mount /mnt/stateful_partition/unencrypted/dlc-factory images is where
 #   factory installed DLC images reside.
 # -bind-mount /run/dbus for system dbus socket.
@@ -29,6 +30,8 @@ profile = minimalistic-mountns-nodev
 mount = tmpfs,/run,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
 mount = tmpfs,/var,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
 mount = tmpfs,/sys,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
+mount = /run/daemon-store/dlcservice,/run/daemon-store/dlcservice,none,MS_BIND|MS_REC
+mount = /run/daemon-store-cache/dlcservice,/run/daemon-store-cache/dlcservice,none,MS_BIND|MS_REC
 bind-mount = /run/dbus
 bind-mount = /run/hibernate
 bind-mount = /var/lib/metrics,,1
